# soft-ue-cli

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  build_executable.py  pyproject.toml  run_cli.py  soft-ue-cli.spec
soft_ue_cli/: __main__.py  client.py  discovery.py  errors.py  mcp_schema.py  mcp_server.py  whitelist.py
soft_ue_cli/plugin_data/SoftUEBridge/: TODO.md
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Private/Server/: BridgeServer.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Private/Tools/: GetLogsTool.h
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Public/Server/: BridgeServer.h
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Editor/: RunAutomationTool.cpp
tests/: test_client.py  test_discovery.py  test_github.py  test_main.py  test_mcp_schema.py  test_plugin_descriptor.py  test_whitelist.py
