[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soft-ue-cli"
version = "1.32.0"
description = "CLI tool for controlling Unreal Engine via soft-ue-bridge plugin"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
soft-ue-cli = "soft_ue_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/softdaddy-o/soft-ue-cli"
Repository = "https://github.com/softdaddy-o/soft-ue-cli"

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[tool.hatch.build]
include = ["soft_ue_cli/**"]

[tool.hatch.build.targets.wheel]
packages = ["soft_ue_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
